{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 79,
  "lineage": "c91990b5-c0ba-5c0c-67f7-e669cb8b3544",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051cd117db3b56e59",
            "arn": "arn:aws:ec2:eu-central-1:277537769232:elastic-ip/eipalloc-051cd117db3b56e59",
            "domain": "vpc",
            "id": "eipalloc-051cd117db3b56e59",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-177-42-100.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.177.42.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT_EIP"
            },
            "tags_all": {
              "Name": "NAT_EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:internet-gateway/igw-0f0129d4a0ffff874",
            "id": "igw-0f0129d4a0ffff874",
            "owner_id": "277537769232",
            "tags": {
              "Name": "IGW-Hub"
            },
            "tags_all": {
              "Name": "IGW-Hub"
            },
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:277537769232:targetgroup/nginx-tg/3531ae738a538d2b",
            "arn_suffix": "targetgroup/nginx-tg/3531ae738a538d2b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:277537769232:targetgroup/nginx-tg/3531ae738a538d2b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051cd117db3b56e59",
            "association_id": "eipassoc-041a6634391c6ce00",
            "connectivity_type": "public",
            "id": "nat-090313a1a4d754f32",
            "network_interface_id": "eni-07f30ac9f964e39ad",
            "private_ip": "10.0.0.130",
            "public_ip": "63.177.42.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5e16b108f11f87b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_hub",
            "aws_subnet.subnet_hub",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c878b9631fee8b8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-090313a1a4d754f32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c878b9631fee8b8e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_hub",
            "aws_nat_gateway.nat_hub",
            "aws_route_table.private",
            "aws_subnet.subnet_hub",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0129d4a0ffff874",
            "id": "r-rtb-000c7f7e0ec66a5d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000c7f7e0ec66a5d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_hub",
            "aws_route_table.public",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:route-table/rtb-0c878b9631fee8b8e",
            "id": "rtb-0c878b9631fee8b8e",
            "owner_id": "277537769232",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:route-table/rtb-000c7f7e0ec66a5d0",
            "id": "rtb-000c7f7e0ec66a5d0",
            "owner_id": "277537769232",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "containers_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03973f0f2dce926cd",
            "route_table_id": "rtb-0c878b9631fee8b8e",
            "subnet_id": "subnet-0d6ad28abdee16c82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnet_container_private",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ba65f737991af96",
            "route_table_id": "rtb-0c878b9631fee8b8e",
            "subnet_id": "subnet-02e21c2c73e3c5f42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnet_data_private",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "monitoring_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2f640bef0ffce2",
            "route_table_id": "rtb-0c878b9631fee8b8e",
            "subnet_id": "subnet-078ed41a1a9598d2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnet_monitoring_private",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a0dc3052f3f6d96",
            "route_table_id": "rtb-000c7f7e0ec66a5d0",
            "subnet_id": "subnet-0e5e16b108f11f87b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.subnet_hub",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_container",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:security-group/sg-05f92cb37ff55f86b",
            "description": "Allow inbound traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f92cb37ff55f86b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "securitygroup-container",
            "name_prefix": "",
            "owner_id": "277537769232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Container"
            },
            "tags_all": {
              "Name": "SG-Container"
            },
            "timeouts": null,
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssm_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-502262402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05f92cb37ff55f86b",
            "security_group_rule_id": "sgr-014966c909df53ae0",
            "self": false,
            "source_security_group_id": "sg-05f92cb37ff55f86b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_container",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_container_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:subnet/subnet-0d6ad28abdee16c82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6ad28abdee16c82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277537769232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Spoke-Container-Private"
            },
            "tags_all": {
              "Name": "Subnet-Spoke-Container-Private"
            },
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_data_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:subnet/subnet-02e21c2c73e3c5f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e21c2c73e3c5f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277537769232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Spoke-Data-Private"
            },
            "tags_all": {
              "Name": "Subnet-Spoke-Data-Private"
            },
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:subnet/subnet-0e5e16b108f11f87b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e16b108f11f87b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277537769232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Hub"
            },
            "tags_all": {
              "Name": "Subnet-Hub"
            },
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_hub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:subnet/subnet-0dd5cbb181419839a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd5cbb181419839a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277537769232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Hub-2"
            },
            "tags_all": {
              "Name": "Subnet-Hub-2"
            },
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_monitoring_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:subnet/subnet-078ed41a1a9598d2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078ed41a1a9598d2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277537769232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Spoke-Monitoring-Private"
            },
            "tags_all": {
              "Name": "Subnet-Spoke-Monitoring-Private"
            },
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:vpc/vpc-009488b2e31dcd6d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b8c171d6cc4b334",
            "default_route_table_id": "rtb-03c5dd6c23534d5b1",
            "default_security_group_id": "sg-0833e10f44f3fe2a1",
            "dhcp_options_id": "dopt-01b369923d7c5f27c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009488b2e31dcd6d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c5dd6c23534d5b1",
            "owner_id": "277537769232",
            "tags": {
              "Name": "VPC-Hub"
            },
            "tags_all": {
              "Name": "VPC-Hub"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:vpc-endpoint/vpce-0356e6e592a7557a7",
            "dns_entry": [
              {
                "dns_name": "vpce-0356e6e592a7557a7-lsrs91c7.ecs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0356e6e592a7557a7-lsrs91c7-eu-central-1a.ecs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0356e6e592a7557a7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-031c518f1c339fce8"
            ],
            "owner_id": "277537769232",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05f92cb37ff55f86b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecs",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.60",
                "subnet_id": "subnet-0d6ad28abdee16c82"
              }
            ],
            "subnet_ids": [
              "subnet-0d6ad28abdee16c82"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_container",
            "aws_subnet.subnet_container_private",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:vpc-endpoint/vpce-0f82ea1fe9572f12e",
            "dns_entry": [
              {
                "dns_name": "vpce-0f82ea1fe9572f12e-4icm77b8.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f82ea1fe9572f12e-4icm77b8-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f82ea1fe9572f12e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07d3e340b1a892d1c"
            ],
            "owner_id": "277537769232",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05f92cb37ff55f86b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.77",
                "subnet_id": "subnet-0d6ad28abdee16c82"
              }
            ],
            "subnet_ids": [
              "subnet-0d6ad28abdee16c82"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_container",
            "aws_subnet.subnet_container_private",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:277537769232:vpc-endpoint/vpce-0e69e71dad7072271",
            "dns_entry": [
              {
                "dns_name": "vpce-0e69e71dad7072271-6clqd1xa.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e69e71dad7072271-6clqd1xa-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e69e71dad7072271",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d31595e4d342864"
            ],
            "owner_id": "277537769232",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05f92cb37ff55f86b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.92",
                "subnet_id": "subnet-0d6ad28abdee16c82"
              }
            ],
            "subnet_ids": [
              "subnet-0d6ad28abdee16c82"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-009488b2e31dcd6d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_container",
            "aws_subnet.subnet_container_private",
            "aws_vpc.vpc_hub"
          ]
        }
      ]
    }
  ]
}